--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:Zoomag"
              StartupUri="/Views/AdminWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
