--- a/Views/AdminWindow.xaml
+++ b/Views/AdminWindow.xaml
@@ -1,14 +1,13 @@
-﻿<Window x:Class="Zoomag.Views.AdminWindow"
+﻿<!-- File: Zoomag/Views/AdminWindow.xaml -->
+<Window x:Class="Zoomag.Views.AdminWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="AdminWindow" Height="500" Width="700">
-    
     <ScrollViewer>
         <StackPanel Margin="15">
-            
             <!-- Группа: Управление справочниками -->
             <GroupBox Header="Справочники" Margin="5" Padding="10">
                 <StackPanel>
@@ -22,18 +21,15 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
-
                         <TextBlock Text="Новая категория:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center"/>
-                        <TextBox x:Name="CategoryInput" Grid.Row="0" Grid.Column="1" Margin="5" FontSize="12"/>
-                        <Button Content="Добавить" Grid.Row="0" Grid.Column="2" Margin="5" Padding="10,3" Click="AddCategory"/>
-
+                        <TextBox x:Name="CategoryInput" Grid.Row="0" Grid.Column="1"/>
+                        <Button Content="Добавить" Grid.Row="0" Grid.Column="2" Click="AddCategory"/>
                         <TextBlock Text="Новая ед/изм:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center"/>
-                        <TextBox x:Name="UnitInput" Grid.Row="1" Grid.Column="1" Margin="5" FontSize="12"/>
-                        <Button Content="Добавить" Grid.Row="1" Grid.Column="2" Margin="5" Padding="10,3" Click="AddUnit"/>
+                        <TextBox x:Name="UnitInput" Grid.Row="1" Grid.Column="1"/>
+                        <Button Content="Добавить" Grid.Row="1" Grid.Column="2" Click="AddUnit"/>
                     </Grid>
                 </StackPanel>
             </GroupBox>
-
             <!-- Группа: Ввод товара -->
             <GroupBox Header="Добавление товара" Margin="5" Padding="10">
                 <StackPanel>
@@ -49,37 +45,29 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
-
                         <TextBlock Text="Товар:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center"/>
-                        <TextBox x:Name="ProductNameInput" Grid.Row="0" Grid.Column="1" Margin="5" FontSize="12"/>
-
+                        <TextBox x:Name="ProductNameInput" Grid.Row="0" Grid.Column="1"/>
                         <TextBlock Text="Количество:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center"/>
-                        <TextBox x:Name="QuantityInput" Grid.Row="1" Grid.Column="1" Margin="5" FontSize="12"/>
-
+                        <TextBox x:Name="QuantityInput" Grid.Row="1" Grid.Column="1"/>
                         <TextBlock Text="Единица измерения:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center"/>
-                        <ComboBox x:Name="UnitSelector" Grid.Row="2" Grid.Column="1" Margin="5" FontSize="12"/>
-
+                        <ComboBox x:Name="UnitSelector" Grid.Row="2" Grid.Column="1"/>
                         <TextBlock Text="Стоимость:" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center"/>
-                        <TextBox x:Name="PriceInput" Grid.Row="3" Grid.Column="1" Margin="5" FontSize="12"/>
-
+                        <TextBox x:Name="PriceInput" Grid.Row="3" Grid.Column="1"/>
                         <TextBlock Text="Категория:" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center"/>
-                        <ComboBox x:Name="CategorySelector" Grid.Row="4" Grid.Column="1" Margin="5" FontSize="12"/>
+                        <ComboBox x:Name="CategorySelector" Grid.Row="4" Grid.Column="1"/>
                     </Grid>
-
-                    <Button Content="Сохранить товар" Margin="0,10,0,0" Padding="15,5" Click="SaveProduct"/>
+                    <Button Content="Сохранить товар" Margin="0,10,0,0" Click="SaveProduct"/>
                 </StackPanel>
             </GroupBox>
-
             <!-- Группа: Основные действия -->
             <GroupBox Header="Основные действия" Margin="5" Padding="10">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                    <Button Content="Привоз" Margin="0,0,10,0" Padding="15,5" Click="ShowArrival"/>
-                    <Button Content="Продажа" Margin="0,0,10,0" Padding="15,5" Click="ShowSale"/>
-                    <Button Content="Склад" Margin="0,0,10,0" Padding="15,5" Click="ShowStock"/>
-                    <Button Content="Отчеты" Margin="0,0,10,0" Padding="15,5" Click="ShowReports"/>
+                    <Button Content="Привоз" Margin="0,0,10,0" Click="ShowArrival"/>
+                    <Button Content="Продажа" Margin="0,0,10,0" Click="ShowSale"/>
+                    <Button Content="Склад" Margin="0,0,10,0" Click="ShowStock"/>
+                    <Button Content="Отчеты" Margin="0,0,10,0" Click="ShowReports"/>
                 </StackPanel>
             </GroupBox>
-
         </StackPanel>
     </ScrollViewer>
 </Window>
