--- a/Views/LoginWindow.xaml
+++ b/Views/LoginWindow.xaml
@@ -13,20 +13,14 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
-        <TextBlock Grid.Row="0" Text="Логин" FontSize="14" Margin="0,0,0,5"/>
-        <TextBox x:Name="LoginTextBox" Grid.Row="1" Margin="0,0,0,10" FontSize="14"/>
-
-        <TextBlock Grid.Row="2" Text="Пароль" FontSize="14" Margin="0,0,0,5"/>
-        <PasswordBox x:Name="PasswordBox" Grid.Row="3" Margin="0,0,0,10" FontSize="14"/>
-
-        <TextBlock Grid.Row="4" Text="Роль" FontSize="14" Margin="0,0,0,5"/>
-        <ComboBox x:Name="RoleComboBox" Grid.Row="5" Margin="0,0,0,20" FontSize="14" 
-                  SelectedIndex="0">
+        <TextBlock Grid.Row="0" Text="Логин" />
+        <TextBox x:Name="LoginTextBox" Grid.Row="1" />
+        <TextBlock Grid.Row="2" Text="Пароль" />
+        <PasswordBox x:Name="PasswordBox" Grid.Row="3" />
+        <TextBlock Grid.Row="4" Text="Роль" />
+        <ComboBox x:Name="RoleComboBox" Grid.Row="5" SelectedIndex="0">
             <!-- Заполняется в коде -->
         </ComboBox>
-
-        <Button x:Name="LoginButton" Grid.Row="6" Content="Войти" FontSize="14" 
-                Padding="20,10" Click="LoginButton_Click"/>
+        <Button x:Name="LoginButton" Grid.Row="6" Content="Войти" Click="LoginButton_Click"/>
     </Grid>
 </Window>
