--- a/Views/ProductEditor.xaml
+++ b/Views/ProductEditor.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="Zoomag.Views.ProductEditor"
+﻿<!-- File: Zoomag/Views/ProductEditor.xaml -->
+<Window x:Class="Zoomag.Views.ProductEditor"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -17,15 +18,15 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        
+
+        <!-- Таблица поставок -->
         <DataGrid Grid.Column="0" 
                   Grid.ColumnSpan="2" 
                   Grid.Row="0" 
                   Grid.RowSpan="3" 
                   x:Name="SupplyDataGrid" 
                   AutoGenerateColumns="False" 
-                  ItemsSource="{Binding Test}" 
-                  FontSize="24">
+                  ItemsSource="{Binding Test}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Дата" 
                                     Width="200" 
@@ -44,26 +45,27 @@
                                     Binding="{Binding Path=Price}"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        
+
+        <!-- Кнопка импорта -->
         <Button Grid.Column="0" 
                 Grid.Row="3" 
                 x:Name="ImportButton" 
                 Content="Ввод списком" 
-                FontSize="25" 
-                Click="ImportFromExcel"></Button>
-                
+                Click="ImportFromExcel"/>
+
+        <!-- Кнопка сохранения -->
         <Button Grid.Column="1" 
                 Grid.Row="3"  
                 x:Name="SaveButton" 
                 Content="Запись в БД" 
-                FontSize="25" 
-                Click="SaveToDatabase"></Button>
-                
+                Click="SaveToDatabase"/>
+
+        <!-- Кнопка назад -->
         <Button Grid.Row="2" 
                 Grid.Column="2" 
                 x:Name="BackButton" 
                 Content="Назад" 
-                FontSize="24" 
-                Grid.RowSpan="2"></Button>
+                Grid.RowSpan="2"
+                Style="{StaticResource BackButton}"/>
     </Grid>
 </Window>
