--- a/Views/Reports/AdminReportsWindow.xaml
+++ b/Views/Reports/AdminReportsWindow.xaml
@@ -3,76 +3,25 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Zoomag"
         mc:Ignorable="d"
         Title="AdminReportsWindow" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        
-        <Button Grid.Column="0" 
-                Grid.Row="0" 
-                x:Name="PriceListButton" 
-                Content="Прайс-лист" 
-                FontSize="20" 
-                Click="GeneratePriceList" 
-                Margin="10,10,10,10"></Button>
-                
-        <Button Grid.Column="0" 
-                Grid.Row="1" 
-                x:Name="CategoryReportButton" 
-                Content="Отчет по категориям" 
-                FontSize="20" 
-                Click="ViewCategoryReport" 
-                Margin="10,10,10,10"></Button>
-                
-        <Button Grid.Column="0" 
-                Grid.Row="2" 
-                x:Name="DailyReceiptReportButton" 
-                Content="Отчет по поступлению товаров за день"  
-                FontSize="20" 
-                Click="ViewDailyReceiptReport" 
-                Margin="10,10,10,10"></Button>
-                
-        <Button Grid.Column="1" 
-                Grid.Row="0" 
-                x:Name="IncomingGoodsJournalButton" 
-                Content="Журнал поступления товаров" 
-                FontSize="20" 
-                Click="ViewIncomingGoodsJournal" 
-                Margin="10,10,10,10"></Button>
-                
-        <Button Grid.Column="1" 
-                Grid.Row="1" 
-                x:Name="StockReportButton" 
-                Content="Отчет по складу" 
-                FontSize="20" 
-                Click="GenerateStockReport" 
-                Margin="10,10,10,10"></Button>
-                
-        <Button Grid.Column="1" 
-                Grid.Row="2" 
-                x:Name="ZeroStockButton" 
-                Content="Нулевые позиции" 
-                FontSize="20" 
-                Click="ViewZeroStockReport" 
-                Margin="10,10,10,10"></Button>
-                
-        <Button Grid.Column="0" 
-                Grid.Row="4" 
-                x:Name="BackButton" 
-                Content="Назад" 
-                FontSize="20" 
-                Click="GoToAdmin" 
-                Margin="10,10,10,10" 
-                Grid.ColumnSpan="2"></Button>
+        <Button Grid.Column="0" Grid.Row="0" x:Name="PriceListButton" Content="Прайс-лист" Click="GeneratePriceList"/>
+        <Button Grid.Column="0" Grid.Row="1" x:Name="CategoryReportButton" Content="Отчет по категориям" Click="ViewCategoryReport"/>
+        <Button Grid.Column="0" Grid.Row="2" x:Name="DailyReceiptReportButton" Content="Отчет по поступлению товаров за день" Click="ViewDailyReceiptReport"/>
+        <Button Grid.Column="1" Grid.Row="0" x:Name="IncomingGoodsJournalButton" Content="Журнал поступления товаров" Click="ViewIncomingGoodsJournal"/>
+        <Button Grid.Column="1" Grid.Row="1" x:Name="StockReportButton" Content="Отчет по складу" Click="GenerateStockReport"/>
+        <Button Grid.Column="1" Grid.Row="2" x:Name="ZeroStockButton" Content="Нулевые позиции" Click="ViewZeroStockReport"/>
+        <Button Grid.Column="0" Grid.Row="3" x:Name="BackButton" Content="Назад" Click="GoToAdmin" Grid.ColumnSpan="2" Style="{StaticResource BackButton}"/>
     </Grid>
 </Window>
