--- a/Views/Reports/CategoryReportWindow.xaml
+++ b/Views/Reports/CategoryReportWindow.xaml
@@ -3,59 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Zoomag"
         mc:Ignorable="d"
         Title="Отчет по категориям" Height="450" Width="800">
-    <!-- Используем DockPanel для более логичной раскладки -->
     <DockPanel>
-        <!-- Правая панель для кнопок и комбобокса -->
-        <StackPanel DockPanel.Dock="Right" 
-                    Width="200" 
-                    Margin="10"> <!-- Отступ слева от DataGrid -->
-            <Label Content="Выберите категорию:" 
-                   FontSize="14" 
-                   Margin="0,0,0,5"/> <!-- Подпись для ComboBox -->
-            <ComboBox x:Name="CategorySelector" 
-                      Margin="0,0,0,10" 
-                      SelectionChanged="OnCategoryChanged"/>
-
-            <Button x:Name="ExportToExcelButton" 
-                    Content="Вывод в Excel" 
-                    FontSize="16" 
-                    Margin="0,0,0,5" 
-                    Padding="10,5" 
-                    Click="ExportToExcel"/>
-            <Button x:Name="BackButton" 
-                    Content="Назад" 
-                    FontSize="16" 
-                    Padding="10,5" 
-                    Click="GoToAdmin"/>
+        <StackPanel DockPanel.Dock="Right" Width="200" Margin="10">
+            <Label Content="Выберите категорию:"/>
+            <ComboBox x:Name="CategorySelector" Margin="0,0,0,10" SelectionChanged="OnCategoryChanged"/>
+            <Button x:Name="ExportToExcelButton" Content="Вывод в Excel" Click="ExportToExcel" Style="{StaticResource ExportButton}"/>
+            <Button x:Name="BackButton" Content="Назад" Click="GoToAdmin" Style="{StaticResource BackButton}"/>
         </StackPanel>
-
-        <!-- Центральный элемент - DataGrid -->
-        <DataGrid x:Name="CategoryProductsGrid" 
-                  AutoGenerateColumns="False" 
-                  ItemsSource="{Binding Privoz}" 
-                  FontSize="14" 
-                  Margin="10,10,0,10"> <!-- Отступы вокруг DataGrid -->
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Наименование" 
-                                    Binding="{Binding Path=Name}" 
-                                    Width="*"/> <!-- "*" позволяет колонке занимать доступное пространство -->
-                <DataGridTextColumn Header="Ед/изм" 
-                                    Binding="{Binding Path=Unit.Name}" 
-                                    Width="80"/>
-                <!-- Исправлено: используем Amount вместо несуществующего Qty -->
-                <DataGridTextColumn Header="Количество" 
-                                    Binding="{Binding Path=Amount}" 
-                                    Width="100"/>
-                <DataGridTextColumn Header="Цена" 
-                                    Binding="{Binding Path=Price}" 
-                                    Width="100"/>
-                <DataGridTextColumn Header="Категория" 
-                                    Binding="{Binding Path=Category.Name}" 
-                                    Width="100"/>
-            </DataGrid.Columns>
-        </DataGrid>
+        <DataGrid x:Name="CategoryProductsGrid" AutoGenerateColumns="False" ItemsSource="{Binding Privoz}"/> <!-- TODO понять откуда Privoz и зачем -->
     </DockPanel>
 </Window>
