--- a/Views/Reports/StockReportWindow.xaml
+++ b/Views/Reports/StockReportWindow.xaml
@@ -3,49 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Zoomag.Views.Reports"
         mc:Ignorable="d"
         Title="Отчет по складу" Height="450" Width="800">
     <DockPanel>
-        <!-- Правая панель для кнопок -->
-        <StackPanel DockPanel.Dock="Right" 
-                    Width="200" 
-                    Margin="10">
-            <Button x:Name="ExportToExcelButton" 
-                    Content="Вывод в Excel" 
-                    FontSize="16" 
-                    Margin="0,0,0,10" 
-                    Padding="10,5" 
-                    Click="ExportToExcel"/>
-            <Button x:Name="BackButton" 
-                    Content="Назад" 
-                    FontSize="16" 
-                    Padding="10,5" 
-                    Click="GoToAdmin"/>
+        <StackPanel DockPanel.Dock="Right" Width="200" Margin="10">
+            <Button x:Name="ExportToExcelButton" Content="Вывод в Excel" Click="ExportToExcel" Style="{StaticResource ExportButton}"/>
+            <Button x:Name="BackButton" Content="Назад" Click="GoToAdmin" Style="{StaticResource BackButton}"/>
         </StackPanel>
-
-        <!-- Центральный элемент - DataGrid -->
-        <DataGrid x:Name="StockReportGrid" 
-                  AutoGenerateColumns="False" 
-                  FontSize="14" 
-                  Margin="10,10,0,10">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Наименование" 
-                                    Binding="{Binding Path=Name}" 
-                                    Width="*"/>
-                <DataGridTextColumn Header="Цена" 
-                                    Binding="{Binding Path=Price, StringFormat=C2}" 
-                                    Width="100"/>
-                <DataGridTextColumn Header="Количество" 
-                                    Binding="{Binding Path=Amount, StringFormat=N2}" 
-                                    Width="100"/>
-                <DataGridTextColumn Header="Общая стоимость" 
-                                    Width="120">
-                    <DataGridTextColumn.Binding>
-                        <Binding Path="TotalValue" StringFormat="C2" Mode="OneTime" />
-                    </DataGridTextColumn.Binding>
-                </DataGridTextColumn>
-            </DataGrid.Columns>
-        </DataGrid>
+        <DataGrid x:Name="StockReportGrid" AutoGenerateColumns="False"/>
     </DockPanel>
 </Window>
