--- a/App.xaml
+++ b/App.xaml
@@ -1,13 +1,5 @@
 ﻿<Application x:Class="Zoomag.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Zoomag"
-             StartupUri="/Views/AdminWindow.xaml">
-    <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Styles.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Application.Resources>
+             StartupUri="/Views/LoginWindow.xaml">
 </Application>
