--- a/Views/LoginWindow.xaml
+++ b/Views/LoginWindow.xaml
@@ -2,25 +2,54 @@
 <Window x:Class="Zoomag.Views.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Login" Height="300" Width="350"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib" 
+        Title="Вход в систему"
+        Height="450"
+        Width="400"
         WindowStartupLocation="CenterScreen">
-    <Grid Margin="20">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Text="Логин" />
-        <TextBox x:Name="LoginTextBox" Grid.Row="1" />
-        <TextBlock Grid.Row="2" Text="Пароль" />
-        <PasswordBox x:Name="PasswordBox" Grid.Row="3" />
-        <TextBlock Grid.Row="4" Text="Роль" />
-        <ComboBox x:Name="RoleComboBox" Grid.Row="5" SelectedIndex="0">
-            <!-- Заполняется в коде -->
-        </ComboBox>
-        <Button x:Name="LoginButton" Grid.Row="6" Content="Войти" Click="LoginButton_Click"/>
-    </Grid>
+    <Border Background="White" CornerRadius="8" Margin="20">
+        <StackPanel Orientation="Vertical" VerticalAlignment="Center" Margin="30,20">
+            <!-- Заголовок -->
+            <TextBlock Text="Вход в Зоомаг"
+                       FontSize="24"
+                       FontWeight="Bold"
+                       HorizontalAlignment="Center"
+                       Margin="0,0,0,30"/>
+
+            <!-- Логин -->
+            <TextBlock Text="Логин" FontSize="14" Margin="0,0,0,5"/>
+
+            <Grid Margin="0,0,0,15">
+                <TextBox x:Name="LoginTextBox"
+                         Height="35"
+                         VerticalContentAlignment="Center"/>
+
+                </Grid>
+
+            <!-- Пароль -->
+            <TextBlock Text="Пароль" FontSize="14" Margin="0,0,0,5"/>
+
+            <Grid Margin="0,0,0,15">
+                <PasswordBox x:Name="PasswordBox"
+                             Height="35"
+                             VerticalContentAlignment="Center"/>
+
+                </Grid>
+
+            <!-- Роль -->
+            <TextBlock Text="Роль" FontSize="14" Margin="0,0,0,5"/>
+            <ComboBox x:Name="RoleComboBox"
+                      Height="35"
+                      Margin="0,0,0,25"
+                      SelectedIndex="0"/>
+
+            <!-- Кнопка -->
+            <UniformGrid Rows="1" Columns="1">
+                <Button x:Name="LoginButton"
+                        Content="Войти"
+                        Height="40"
+                        Click="LoginButton_Click"/>
+            </UniformGrid>
+        </StackPanel>
+    </Border>
 </Window>
