--- a/Views/Reports/PriceListWindow.xaml
+++ b/Views/Reports/PriceListWindow.xaml
@@ -7,8 +7,8 @@
         Title="Прайс-лист" Height="450" Width="800">
     <DockPanel>
         <StackPanel DockPanel.Dock="Right" Width="200" Margin="10">
-            <Button x:Name="ExportToExcelButton" Content="Вывод в Excel" Click="ExportToExcel" Style="{StaticResource ExportButton}"/>
-            <Button x:Name="BackButton" Content="Назад" Click="GoToAdmin" Style="{StaticResource BackButton}"/>
+            <Button x:Name="ExportToExcelButton" Content="Вывод в Excel" Click="ExportToExcel" />
+            <Button x:Name="BackButton" Content="Назад" Click="GoToAdmin" />
         </StackPanel>
         <DataGrid x:Name="PriceListGrid" AutoGenerateColumns="False"/>
     </DockPanel>
