--- a/Views/SaleWindow.xaml
+++ b/Views/SaleWindow.xaml
@@ -46,9 +46,9 @@
                                VerticalAlignment="Center"
                                Margin="0,0,5,0"/>
                     <TextBox x:Name="SearchInput"
-                             Height="35"
+                             MinWidth="55"
                              VerticalContentAlignment="Center"
-                             Margin="0,0,10,0"
+                             Margin="4,0,10,0"
                              TextChanged="SearchInput_TextChanged"/>
                 </StackPanel>
                 <Button Grid.Column="1"
@@ -56,15 +56,7 @@
                         Content="Очистить поиск"
                         Click="RefreshProductList"
                         Height="35"
-                        Margin="0,0,5,0"
-                        Style="{StaticResource ResetButton}" />
-                <Button Grid.Column="2"
-                        x:Name="FilterButton"
-                        Content="Фильтр по категории"
-                        Click="ShowCategoryFilter"
-                        Height="35"
-                        Background="#0d6efd"
-                        Foreground="White"/>
+                        Margin="0,0,5,0" />
             </Grid>
         </Border>
 
@@ -134,8 +126,7 @@
                         Content="Очистить чек"
                         Click="ClearCurrentReceipt"
                         Height="35"
-                        Margin="0,0,5,0"
-                        Style="{StaticResource DangerButton}" />
+                        Margin="0,0,5,0" />
                 <Button Grid.Column="3"
                         x:Name="AddToReceiptButton"
                         Content="Добавить в чек"
@@ -174,8 +165,7 @@
                             <Button Content="Удалить"
                                     Click="RemoveItemFromReceipt"
                                     FontSize="10"
-                                    Padding="8,2"
-                                    Style="{StaticResource DangerButton}" />
+                                    Padding="8,2" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -192,14 +182,12 @@
                     Click="FinalizeCurrentSale"
                     Height="45"
                     Padding="30,10"
-                    Margin="0,0,10,0"
-                    Style="{StaticResource SaveButton}" />
+                    Margin="0,0,10,0" />
             <Button x:Name="BackToMainMenuButton"
                     Content="Назад в главное меню"
                     Click="ReturnToMainMenu"
                     Height="45"
-                    Padding="30,10"
-                    Style="{StaticResource BackButton}" />
+                    Padding="30,10" />
         </StackPanel>
     </Grid>
 </Window>
